# SocketServer

./: .gitignore  README.md  ca.crt  cert.crt  client.py  main.py  pseudocode.md  pyproject.toml  setup.py  test.py  todo
CustomizableSocketServer/: BaseClient.py  BaseServer.py  KillableThread.py  SocketOperations.py  decorators.py  exceptions.py  r_types.py  schemas.py  utilities.py
CustomizableSocketServer/__main__/: client.py  server.py
CustomizeableSocketServer/: BaseClient.py  BaseServer.py  BaseSocketOperator.py  Connection.py  SocketOperations.py  buffer.py  schemas.py
CustomizeableSocketServer.egg-info/: PKG-INFO
CustomizeableSocketServer/__main__/: client.py  server.py
src/: BaseClient.py  BaseServer.py  buffer.py  schemas.py
src/main/: client.py  server.py
tests/: test-client.py  test-server.py  test.py  test_file.txt
