[tool.poetry]
name = "raw-socket-server"
version = "0.1.0"
description = ""
authors = ["MalinkyZubr <96273195+MalinkyZubr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "raw_socket_server"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
